# Projeto-sistema-para-loja-de-carros

./: .gitignore  README.md  main.py  pyproject.toml  schemas.py  start.bat
app/backend/: README.md  pyproject.toml
app/backend/src/: main.py
app/backend/src/controllers/: car_controller.py
app/backend/src/repositories/: cars.db  database.py  entities.py
app/backend/src/schemas/: car_schema.py
app/backend/src/services/: car_service.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: test_car_controller.py
app/backend/tests/unit/: test_car_service.py
app/frontend/: README.md  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/components/: CarCard.tsx  CarModal.tsx  FloatingActions.tsx  Header.tsx
app/frontend/src/pages/: Home.tsx
app/frontend/src/services/: api.ts
app/frontend/src/styles/: index.scss
