[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gerenciador-estoque-carros"
version = "0.1.0"
description = "Um sistema simples de gerenciamento de estoque de carros com FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["main", "car_service", "database", "schemas"]
